--- a/src/main/driverdialog.ui
+++ b/src/main/driverdialog.ui
@@ -9,105 +9,46 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>697</width>
-    <height>286</height>
+    <width>700</width>
+    <height>311</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
+  <property name="minimumSize">
+   <size>
+    <width>700</width>
+    <height>311</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>400</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Driver Settings</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme="audio-card">
+    <normaloff>.</normaloff>.</iconset>
+  </property>
   <property name="modal">
    <bool>true</bool>
   </property>
-  <layout class="QGridLayout" name="gridLayout" columnstretch="2,0,0">
-   <item row="0" column="0">
-    <widget class="QGroupBox" name="chooseDriverGroup">
-     <property name="enabled">
-      <bool>false</bool>
+  <layout class="QGridLayout" name="gridLayout" columnstretch="4,3,0">
+   <item row="0" column="1" rowspan="2">
+    <widget class="QGroupBox" name="detailsGroup">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>1</verstretch>
+      </sizepolicy>
      </property>
      <property name="title">
-      <string>Audio driver</string>
+      <string>Stream</string>
      </property>
-     <layout class="QFormLayout">
-      <property name="labelAlignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
+     <layout class="QFormLayout" name="formLayout_2">
       <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Driver type:</string>
-        </property>
-        <property name="buddy">
-         <cstring>driverType</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="driverType"/>
-      </item>
-      <item row="1" column="1">
-       <widget class="QCheckBox" name="duplexMode">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Duplex mode</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Output device:</string>
-        </property>
-        <property name="buddy">
-         <cstring>outputDevice</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QComboBox" name="outputDevice"/>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Input device:</string>
-        </property>
-        <property name="buddy">
-         <cstring>inputDevice</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QComboBox" name="inputDevice">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Format:</string>
-        </property>
-        <property name="buddy">
-         <cstring>sampleFormat</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QComboBox" name="sampleFormat"/>
-      </item>
-      <item row="5" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Sample rate:</string>
@@ -117,45 +58,46 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
-       <widget class="QComboBox" name="sampleRate"/>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="sampleRate">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>1</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
-     </layout>
-     <zorder>label</zorder>
-     <zorder>driverType</zorder>
-     <zorder>duplexMode</zorder>
-     <zorder>outputDevice</zorder>
-     <zorder>label_5</zorder>
-     <zorder>inputDevice</zorder>
-     <zorder>label_2</zorder>
-     <zorder>label_3</zorder>
-     <zorder>sampleRate</zorder>
-     <zorder>label_4</zorder>
-     <zorder>sampleFormat</zorder>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QGroupBox" name="detailsGroup">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>1</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="title">
-      <string>Detais</string>
-     </property>
-     <layout class="QFormLayout" name="formLayout_2">
-      <property name="sizeConstraint">
-       <enum>QLayout::SetMinimumSize</enum>
-      </property>
-      <property name="labelAlignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-      <item row="0" column="0">
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Sample format:</string>
+        </property>
+        <property name="buddy">
+         <cstring>sampleFormat</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="sampleFormat">
+        <item>
+         <property name="text">
+          <string>Float 32 bit</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="2" column="0" colspan="2">
+       <widget class="QCheckBox" name="xrunStop">
+        <property name="text">
+         <string>Break on buffer Xrun</string>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
        <widget class="QLabel" name="label_8">
         <property name="text">
          <string>Buffer size:</string>
@@ -165,14 +107,14 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="3" column="1">
        <widget class="QComboBox" name="bufferSize">
         <property name="currentText">
          <string/>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="4" column="0">
        <widget class="QLabel" name="label_9">
         <property name="text">
          <string>Buffers:</string>
@@ -182,7 +124,31 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="5" column="0" colspan="2">
+       <widget class="QCheckBox" name="realtime">
+        <property name="text">
+         <string>Realtime scheduling</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QLabel" name="label_11">
+        <property name="text">
+         <string>Priority:</string>
+        </property>
+        <property name="buddy">
+         <cstring>priority</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1">
+       <widget class="QSpinBox" name="priority">
+        <property name="maximum">
+         <number>89</number>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
        <widget class="QSpinBox" name="bufferCount">
         <property name="minimum">
          <number>2</number>
@@ -190,7 +156,139 @@
         <property name="maximum">
          <number>16</number>
         </property>
+        <property name="value">
+         <number>3</number>
+        </property>
        </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QGroupBox" name="inputGroup">
+     <property name="title">
+      <string>Input device</string>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+     <layout class="QFormLayout" name="formLayout_3">
+      <item row="0" column="0" colspan="2">
+       <widget class="QCheckBox" name="duplexMode">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>1</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Enable input (duplex mode)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Input device:</string>
+        </property>
+        <property name="buddy">
+         <cstring>inputDevice</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="inputDevice">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>Input channels:</string>
+        </property>
+        <property name="buddy">
+         <cstring>inChannels</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QSpinBox" name="inChannels">
+        <property name="maximum">
+         <number>32</number>
+        </property>
+        <property name="value">
+         <number>2</number>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="statusLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <property name="rightMargin">
+      <number>10</number>
+     </property>
+    </layout>
+   </item>
+   <item row="0" column="0">
+    <widget class="QGroupBox" name="chooseDriverGroup">
+     <property name="title">
+      <string>Device</string>
+     </property>
+     <property name="checkable">
+      <bool>false</bool>
+     </property>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Driver type:</string>
+        </property>
+        <property name="buddy">
+         <cstring>driverType</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="driverType">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>1</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Output device:</string>
+        </property>
+        <property name="buddy">
+         <cstring>outputDevice</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="outputDevice"/>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_6">
@@ -205,79 +303,26 @@
       <item row="2" column="1">
        <widget class="QSpinBox" name="outChannels">
         <property name="minimum">
-         <number>0</number>
+         <number>2</number>
         </property>
         <property name="maximum">
          <number>32</number>
         </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>Input channels:</string>
-        </property>
-        <property name="buddy">
-         <cstring>inChannels</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QSpinBox" name="inChannels">
-        <property name="minimum">
-         <number>0</number>
-        </property>
-        <property name="maximum">
-         <number>32</number>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_10">
-        <property name="text">
-         <string>Latency:</string>
-        </property>
-        <property name="buddy">
-         <cstring>latency</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLineEdit" name="latency">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0" colspan="2">
-       <widget class="QCheckBox" name="xrunStop">
-        <property name="text">
-         <string>Stop on underrun</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
+        <property name="value">
+         <number>2</number>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
-    <layout class="QHBoxLayout" name="statusLayout"/>
-   </item>
-   <item row="0" column="2" rowspan="2">
+   <item row="0" column="2" rowspan="3">
     <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Apply|QDialogButtonBox::Ok|QDialogButtonBox::Reset|QDialogButtonBox::Retry</set>
+      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::Reset</set>
      </property>
      <property name="centerButtons">
       <bool>false</bool>
@@ -288,17 +333,18 @@
  </widget>
  <tabstops>
   <tabstop>driverType</tabstop>
-  <tabstop>duplexMode</tabstop>
   <tabstop>outputDevice</tabstop>
+  <tabstop>outChannels</tabstop>
+  <tabstop>duplexMode</tabstop>
   <tabstop>inputDevice</tabstop>
-  <tabstop>sampleFormat</tabstop>
+  <tabstop>inChannels</tabstop>
   <tabstop>sampleRate</tabstop>
+  <tabstop>sampleFormat</tabstop>
+  <tabstop>xrunStop</tabstop>
   <tabstop>bufferSize</tabstop>
   <tabstop>bufferCount</tabstop>
-  <tabstop>outChannels</tabstop>
-  <tabstop>inChannels</tabstop>
-  <tabstop>latency</tabstop>
-  <tabstop>xrunStop</tabstop>
+  <tabstop>realtime</tabstop>
+  <tabstop>priority</tabstop>
  </tabstops>
  <resources/>
  <connections>
@@ -309,8 +355,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
+     <x>690</x>
+     <y>263</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -325,8 +371,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
+     <x>690</x>
+     <y>269</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
